--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack.config.dev.js",
+    "prebuild": "rm -rf dist",
+    "build": "webpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,6 +42,7 @@
     "typescript": "^5.1.6",
     "webpack": "5.88.2",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "^5.9.0"
   }
 }
